# remote_builder

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
charts/buildbarn/: Chart.yaml  values.yaml
charts/buildbarn/templates/: _helpers.tpl  analysis-worker.yaml  configmap-scheduler.yaml  configmap-storage.yaml  configmap-worker.yaml  deployment-scheduler.yaml  deployment-storage.yaml  deployment-worker.yaml  grafana-dashboard-rbe.yaml  rollout-worker.yaml  scaledobject-worker.yaml  service-scheduler.yaml  service-storage.yaml  servicemonitor-scheduler.yaml
charts/rbe-tenant/: Chart.yaml  values.yaml
charts/rbe-tenant/templates/: _helpers.tpl  analysis-worker.yaml  configmap-scheduler.yaml  configmap-storage.yaml  configmap-worker.yaml  deployment-scheduler.yaml  deployment-storage.yaml  network-policy.yaml  resource-quota.yaml  rollout-worker.yaml  scaledobject-worker.yaml  service-scheduler.yaml  service-storage.yaml  servicemonitor-scheduler.yaml
cluster/: argo_health.sh  bootstrap.sh  config.env.example  demo_full.sh  install-tools.sh  kind-config.yaml  open-dashboards.sh  phase5_health.sh  portforward.sh  verify-cluster.sh
docs/: argo_rollouts.md  argo_rollouts_issues_encountered_and_fixed.md  cluster_info.md  concept.txt  fullplan.md  grafana_dashboard.md  issues_encountered_and_fixed.md  keda_autoscaling.md  math_rbe.md  overall_readme.md  troubleshooting.md
docs/phases/: phase-1-cluster.md  phase-2-buildbarn.md
examples/hello-bazel/: .bazelrc  BUILD  MODULE.bazel  main.go
examples/math-rbe/: .bazelrc  BUILD.bazel  MODULE.bazel  macros.bzl
examples/math-rbe/cc/: BUILD.bazel  stats.cc  stats.h  stats_main.cc  stats_test.cc
examples/math-rbe/cmd/: BUILD.bazel  main.go
examples/math-rbe/data/: BUILD.bazel  inputs_l.csv  inputs_m.csv  inputs_s.csv
examples/math-rbe/lib/: BUILD.bazel  calc.go  calc_test.go
examples/math-rbe/scripts/: gen_inputs.py  load_test.sh
examples/math-rbe/validate/: BUILD.bazel  requirements.txt  validate_test.py
gitops/apps/argo-rollouts/: application.yaml
gitops/apps/keda/: application.yaml
gitops/apps/minio/: application.yaml
gitops/apps/prometheus/: application.yaml
gitops/apps/rbe-system/: application.yaml
gitops/apps/rbe-tenants/: applicationset.yaml
gitops/apps/sealed-secrets/: application.yaml
gitops/bootstrap/: app-of-apps.yaml
gitops/tenants/tenant-acme/: values.yaml
gitops/tenants/tenant-initech/: values.yaml
