load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

# Bazel 9 removed cc rules from builtins — load() is required.
# rules_cc is declared as bazel_dep in MODULE.bazel.

# cc_library compiles stats.cc and exposes stats.h as a public header.
#
# Key Bazel C++ concepts demonstrated here:
#   hdrs:  headers that consumers of this library can #include.
#          Bazel validates that only hdrs-listed files are included by dependents.
#   srcs:  implementation files compiled as separate actions (stats.cc → stats.o).
#   strip_include_prefix: makes includes relative to the workspace root so
#          #include "cc/stats.h" works from any package.
cc_library(
    name = "stats",
    hdrs = ["stats.h"],
    srcs = ["stats.cc"],
    # No strip_include_prefix needed: all consumers are in the same package
    # and use #include "stats.h" directly.  strip_include_prefix is only
    # required when headers sit in a subdirectory that differs from the
    # desired include path.
    visibility = ["//visibility:public"],
)

# cc_binary links stats_main.cc against the stats library → executable.
# Exposed as a tool in the math_pipeline macro's _stats genrule.
cc_binary(
    name = "stats_bin",
    srcs = ["stats_main.cc"],
    deps = [":stats"],
    visibility = ["//visibility:public"],
)

# cc_test links stats_test.cc + googletest.
# Each cc_test is compiled and linked as one RBE action.
# Run locally: bazel test //cc:stats_test
# Run remotely: bazel test --config=rbe //cc:stats_test
cc_test(
    name = "stats_test",
    srcs = ["stats_test.cc"],
    deps = [":stats"],
    # No external test framework — stats_test.cc has its own main() and
    # minimal assertion macros.  cc_test treats non-zero exit = test failure.
    #
    # tags = ["local"]: the hand-rolled test harness pulls in standard library
    # headers (<cstdio>, <cmath>, <cstring>) via the local GCC toolchain.
    # Bazel RBE enforces hermetic builds and rejects absolute system header
    # paths — so this test always runs on the local host, not remote workers.
    tags = ["local"],
)
